Set up sql stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,8 +1,23 @@
-cmake_minimum_required(VERSION 3.5)
+cmake_minimum_required(VERSION 3.10)
+project(LogDBProject)
 
-project(Senior_Design)
+# Use a modern C++ standard (adjust as needed).
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_library(sqlite3 STATIC sqlite-amalgamation/sqlite3.c)
-target_include_directories(sqlite3 PUBLIC .)
+# Add the sqlite-amalgamation subdirectory.
+add_subdirectory(sqlite-amalgamation)
 
-add_executable(Senior_Design src/main.cpp)
+# Create the executable from your source file(s).
+add_executable(logdb src/main.cpp)
+
+# Include directories:
+# - Your project's include directory (e.g. for logs.hpp)
+# - The sqlite-amalgamation directory (to find sqlite3.h, etc.)
+target_include_directories(logdb PRIVATE
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/include
+    ${CMAKE_CURRENT_SOURCE_DIR}/sqlite-amalgamation
+)
+
+# Link against the sqlite3 library created in the sqlite-amalgamation subdirectory.
+target_link_libraries(logdb PRIVATE sqlite3)
