--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "sqlite-amalgamation"]
-	path = sqlite-amalgamation
-	url = https://github.com/azadkuh/sqlite-amalgamation.git
+[submodule "SQLiteCpp"]
+	path = SQLiteCpp
+	url = https://github.com/SRombauts/SQLiteCpp.git
