Fixed data model

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,28 +1,23 @@
 cmake_minimum_required(VERSION 3.10)
 project(LogDBProject)
 
+# Require C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add the SQLitecpp dir
 add_subdirectory(${CMAKE_SOURCE_DIR}/SQLiteCpp)
 
-# Create the executable from source files.
-add_executable(logdb src/main.cpp)
-
-# Include directories:
-# - Include directory (our code)
-# - The sqlite-amalgamation directory
-target_include_directories(logdb PRIVATE
-    ${CMAKE_CURRENT_SOURCE_DIR}/src/include
-    ${CMAKE_CURRENT_SOURCE_DIR}/sqlite-amalgamation
+# Specify the source files for the executable.
+set(SOURCES
+    src/main.cpp
+    src/db.cpp
+    src/logs.cpp
 )
 
-# Link against the sqlite3 library created in the sqlite-amalgamation subdirectory.
-target_link_libraries(
-    logdb
-    SQLiteCpp
-    sqlite3
-    pthread
-    dl
-)
+# Create the executable target.
+add_executable(logdb ${SOURCES})
+
+# Specify the include directories.
+target_include_directories(logdb PUBLIC ${CMAKE_SOURCE_DIR}/include)
+
+target_link_libraries(logdb PRIVATE SQLiteCpp)
