--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,22 +16,24 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/SQLiteCpp)
 file(GLOB includes ${CMAKE_SOURCE_DIR}/include)
 
 # Specify the source files for the executable.
-set(SOURCES
-    src/main.cpp
-    src/db.cpp
-    src/logs.cpp
-    src/cookies.cpp
-    src/firewood.cpp
-    src/live_edge_slabs.cpp
-    src/mainwindow.cpp
-    include/mainwindow.h
+file(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
+file(GLOB_RECURSE HEADER_FILES "${CMAKE_SOURCE_DIR}/include/*.hpp")
+file(GLOB_RECURSE H_FILES "${CMAKE_SOURCE_DIR}/include/*.h")
+set(
+    SOURCES
+    ${SRC_FILES}
+    ${HEADER_FILES}
+    ${H_FILES}
 )
 
 # Create the executable target.
 add_executable(logdb ${SOURCES})
 
 # Set the AUTOUIC_SEARCH_PATHS property to the source directory.
-set_target_properties(logdb PROPERTIES AUTOMOC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/include")
+set_target_properties(logdb PROPERTIES
+    AUTOMOC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/include;${CMAKE_SOURCE_DIR}/src"
+    AUTOUIC_SEARCH_PATHS "${CMAKE_SOURCE_DIR}/ui"
+)
 
 # Specify the include directories.
 target_include_directories(logdb PUBLIC ${includes})
