--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -22,6 +22,8 @@ jobs:
           echo "CMakeLists.txt not found in the repository root"
           exit 1
         fi
+    - name: Dependencies for doxy
+      run: sudo apt-get install -y doxygen graphviz
     - name: Run CMake
       run: cmake ..
       working-directory: ./build
