--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -33,6 +33,12 @@ jobs:
         uses: actions/checkout@v4
 
       # 2 — Toolchain for docs
+      # 2 — Toolchain for docs
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v4.1.1
+        with:
+          cache: true            # speeds up subsequent runs
+          modules: "qtbase qttools"   # Widgets+Sql live in qtbase; qhelpgenerator in qttools
       - name: Install Doxygen + Graphviz
         run: |
           sudo apt-get update
