--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -11,7 +11,7 @@ on:
 
 # Grant the runner the minimum permissions Pages needs
 permissions:
-  contents: read
+  contents: write
   pages:    write
   id-token: write
 
@@ -31,6 +31,10 @@ jobs:
       # 1 — Fetch code
       - name: Checkout
         uses: actions/checkout@v4
+
+      # 1.5 - fun
+      - name: Repo Visualizer
+        uses: githubocto/repo-visualizer@0.9.1
 
       # 2 — Toolchain for docs
       # 2 — Toolchain for docs
