--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -33,8 +33,8 @@ jobs:
           cd build
           make -j$(sysctl -n hw.logicalcpu)
 
-      - name: Upload built executable
-        uses: actions/upload-artifact@v3
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v4.6.2
         with:
-          name: logdb-macos
-          path: build/logdb
+          # Artifact name
+          name: build/logdb
