--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Qt + Webengine
         run: |
           sudo apt-get update
-          sudo apt-get install -y qt5-default qt5-qmake qtbase5-dev libqt5webkit5-dev qtwebengine5-dev
+          sudo apt-get install -y qt5-qmake qtbase5-dev libqt5webkit5-dev qtwebengine5-dev
 
       - name: Install Doxygen + Graphviz
         run: |
