--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install Qt + Webengine
       run: |
         sudo apt-get update
-        sudo apt-get install -y qt5-default qt5-qmake qtbase5-dev libqt5webkit5-dev qtwebengine5-dev
+        sudo apt-get install -y qt5-qmake qtbase5-dev libqt5webkit5-dev qtwebengine5-dev
         
     - name: Create build directory
       run: mkdir build
